<resources>
    <string name="app_name">410570085_林書榆</string>
    <string name="start">猜字謎遊戲</string>
    <string name="riddle">謎題</string>
    <string name="guess">猜字:</string>
    <string name="yourguess">你的答案</string>
    <string name="result">結果</string>
    <string name="go_q">出題</string>
    <string name="ans_q">答題</string>
    <string name="reans">重答</string>
    <string name="answer">看謎底</string>
</resources>