<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent" android:layout_height="match_parent" tools:context=".MainActivity">
    <TextView android:id="@+id/start" android:layout_width="194dp" android:layout_height="44dp" android:layout_marginStart="108dp" android:layout_marginTop="112dp" android:gravity="center" android:text="@string/start" android:textSize="34sp" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/riddle"
        android:layout_width="350dp"
        android:layout_height="37dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="200dp"
        android:gravity="center"
        android:text="@string/riddle"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView android:id="@+id/guess" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginStart="44dp" android:layout_marginTop="240dp" android:text="@string/guess" android:textSize="28sp" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"/>
    <EditText android:id="@+id/yourguess" android:layout_width="wrap_content" android:layout_height="48dp" android:layout_marginStart="108dp" android:layout_marginTop="240dp" android:ems="10" android:inputType="textPersonName" android:text="@string/yourguess" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"/>
    <FrameLayout
        android:layout_width="324dp"
        android:layout_height="197dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="304dp" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent">
        <ImageView
            android:id="@+id/pic"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/lantern"/>
        <TextView android:id="@+id/result" android:layout_width="326dp" android:layout_height="48dp" android:layout_gravity="bottom" android:layout_marginStart="0dp" android:gravity="center" android:text="@string/result" android:textColor="@color/purple_700" android:textSize="28sp"/>
    </FrameLayout>
    <LinearLayout android:id="@+id/lineralLayout" android:layout_width="400dp" android:layout_height="57dp" android:layout_marginStart="4dp" android:layout_marginBottom="40dp" android:orientation="horizontal" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent">
        <Button android:id="@+id/go_q" style="@style/Widget.AppCompat.Button" android:layout_width="88dp" android:layout_height="48dp" android:layout_marginStart="10dp" android:layout_marginBottom="10dp" android:text="@string/go_q" app:iconSize="5dp"/>
        <Button android:id="@+id/ans_q" style="@style/Widget.AppCompat.Button" android:layout_width="88dp" android:layout_height="48dp" android:layout_marginStart="5dp" android:layout_marginBottom="10dp" android:text="@string/ans_q" app:iconSize="5dp"/>
        <Button android:id="@+id/reans" style="@style/Widget.AppCompat.Button" android:layout_width="88dp" android:layout_height="48dp" android:layout_marginStart="5dp" android:layout_marginBottom="10dp" android:text="@string/reans" app:iconSize="5dp"/>
        <Button android:id="@+id/answer" style="@style/Widget.AppCompat.Button" android:layout_width="88dp" android:layout_height="48dp" android:layout_marginStart="5dp" android:layout_marginBottom="10dp" android:text="@string/answer"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>